# LightTalk

./: README.md
ChatServer/conf/: lightrpc_client.xml
ChatServer/src/: ChatServer.cpp  main.cpp
ChatServer/src/proto/: ChatServer.pb.cc  ChatServer.pb.h  ProxyServer.pb.cc
ChatService/: CMakeLists.txt
ChatService/src/: ChatServer.h  Redis.cpp  ZooKeeperFow.h
ChatService/src/proto/: OfflineService.pb.cc  OfflineService.pb.h
FriendService/: CMakeLists.txt
FriendService/src/interface/: add_friend.h  delete_friend.h  get_friend_list.h  get_user_info.h
FriendService/src/proto/: FriendServer.pb.cc  FriendServer.pb.h  FriendService.pb.h  LogServer.pb.h
FriendService/src/server/: FriendServer.cpp  FriendServer.h  MysqlConnPool.h  run.cpp
FriendService/src/service/: FriendService.h  mian.cpp
GroupService/: CMakeLists.txt
GroupService/src/interface/: add_group.h  create_group.h  get_group_users.h  quit_group.h
GroupService/src/proto/: GroupServer.pb.cc  GroupServer.pb.h  GroupService.pb.cc  GroupService.pb.h
GroupService/src/server/: GroupServer.cpp  GroupServer.h  run.cpp
GroupService/src/service/: GroupService.h  ZooKeeperMaster.h  main.cpp
LogServer/: CMakeLists.txt
LogServer/conf/: lightrpc_client.xml
LogServer/proto/: LogService.proto
LogServer/src/interface/: log_error.h  log_fatal.h  log_info.h  util.cpp  util.h
LogServer/src/proto/: LogSend.pb.cc  LogSend.pb.h  LogService.pb.cc  LogService.pb.h
LogServer/src/server/: LogSend.cpp  LogSend.h  run.cpp
LogServer/src/service/: LogService.h  main.cpp
OfflineService/: CMakeLists.txt
OfflineService/src/interface/: read_offline.h  write_offline.h
OfflineService/src/proto/: OfflineServer.pb.cc  OfflineServer.pb.h
OfflineService/src/server/: MysqlConnPool.cpp  MysqlConnPool.h  OfflineServer.cpp  OfflineServer.h  run.cpp
OfflineService/src/service/: OfflineService.h  ZooKeeperMatser.cpp  main.cpp
Proxy/: CMakeLists.txt
Proxy/src/: ProxyServer.h  ProxyService.cpp  ProxyService.h  Redis.cpp  ZooKeeperMaster.h
Proxy/src/proto/: FriendService.pb.cc  GroupService.pb.cc  GroupService.pb.h  LogServer.pb.cc  ProxyServer.pb.h  UserService.pb.h
Proxy/src/server/: ProxyServer.cpp  ProxyServer.h  ProxyService.cpp  ProxyService.h  Redis.h  ZooKeeperMaster.cpp  main.cpp
UserService/: CMakeLists.txt
UserService/conf/: lightrpc_service.xml
image/: framework.drawio
(+12 files in other folders)
